gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: redis-gateway
  namespace: envoy-gateway
spec:
  gatewayClassName: envoy
  listeners:
    - name: redis-cluster-1
      protocol: TLS
      port: 443
      hostname: "redis1.apatsev.org.ru"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tls-cert
      allowedRoutes:
        namespaces:
          from: All
